--- a/scss/components/__buttons.scss
+++ b/scss/components/__buttons.scss
@@ -47,7 +47,7 @@
 
 .btn-sm {
     font-size: 12px;
-    padding: 9px 24px;
+    padding: 7.7px 24px;
 }
 button:focus {
     outline: none;
