--- a/scss/sections/__footer.scss
+++ b/scss/sections/__footer.scss
@@ -82,8 +82,8 @@
             span{
                 display: block;
                 font-family: 'hoghfish';
-                font-size: 51px;
-                margin-top: -20px;
+                font-size: 35px;
+                margin-top: -4px;
             }
         }
     }
